parser/src/tests/corpus/negatives/bad-parens/expected
Error from "negatives/bad-parens/input", line 1:
| [(]
|   ^
|
+-> Syntax error: while parsing expression, found ']', expected ' ', '!', '$', '(', '[', '\n', 'f', 'l', 'q', or '{'

